# agentic-quant-desk

quant-desk/: .env.example  .gitignore  Avid on X goldman sachs pays its quants $250,000 a year. they just put out a github repo with 11,100+ stars with the exa.md  Movez on X Loop Engineering for trading agents 12 Steps to build a self-running Quant desk.md  README.md  agentic-benchmark-creation-outline.md  agentic-quant-desk-plan-review.md  agentic-quant-desk-plan-v2.md  agentic-quant-desk-plan.md  coding-agent-prompt-twitter-sentiment.md  darkzodchi on X How to run a quant desk with four AI agents and zero people.md  ecosystem.config.js  initial-preferences.md  pyproject.toml  review-response-changelog.md  twitter-sentiment-addition-review.md  twitter-sentiment-plan-v2.md
quant-desk/config/: desk.yaml  sentiment.yaml
quant-desk/quantdesk/: __main__.py  sentiment_cycle.py
quant-desk/scripts/: run_sentiment_cycle.sh  sample_tweets_for_labeling.py
quant-desk/tests/: test_advisors_baseline.py  test_advisors_llm_trend.py  test_advisors_openrouter.py  test_alerts_discord.py  test_data_hyperliquid.py  test_data_raw_store.py  test_data_reference.py  test_data_snapshot.py  test_exclusion_policy.py  test_execution_protection.py  test_execution_shadow.py  test_execution_state.py  test_features_compute.py  test_features_sentiment.py  test_integration_cycle.py  test_ledger_store.py  test_portfolio_engine.py  test_research_eval.py  test_risk_engine.py  test_risk_halts.py  test_risk_stress.py  test_scoring_prospective.py  test_scoring_report.py  test_sent_zscore_baseline.py  test_sentiment_advisor.py  test_sentiment_baseline.py  test_tweet_normalize.py  (+5 more)
(+47 files in other folders)
