[project]
name = "quantdesk"
version = "0.1.0"
description = "Auditable deterministic quant platform with experimental LLM forecasters (shadow-first)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
# Local sentiment scorer (heavy; CPU inference). Install with pip install -e '.[sentiment]'
sentiment = ["transformers>=4.40", "torch>=2.2", "numpy>=1.26"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quantdesk*"]
